styles.css
*{
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
body {
    background-image: url(https://media.pocketgamer.com/artwork/na-29276-1602677524/mario-kart-tour-ios-android-auto-mode.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
}
ul {
    list-style-type: none;
    display: flex;
    flex-wrap: wrap;
    min-height: 50%;
    max-height: 70%;
    min-width: 30%;
    max-width: 46%;

}
h1 {
    width: 46%;
    background-color: rgba(247, 241, 212, 75%);
    border: 5px solid rgb(224, 206, 100);
    margin: 0 auto;
    padding: 0;
    font: 900 50px/55px "Arial";
    text-align: center;
    margin-bottom: 1.2%;

}
li {
    background-color: rgba(247, 241, 212, 75%);
    text-align: center;
    max-height: 30%;
    max-width: 22%;
    margin: 0.5em;
    border: 5px solid rgb(224, 206, 100);
    cursor: pointer;
    border-radius: 9%;
    font-size: 27px;
    font-weight: 700;
    color:#02075D;
    justify-content: flex-start;

}
li:hover {
    background-color: rgba(255, 234, 130, 0.75);
    border-color:rgb(255, 217, 0);
    color: #6c9bc7;
}
li img {
    width: 70%;
    height: 70%;
}
#mario img{
    width: 90%;
}
section {
    display: flex;
    /* max-height: 100vh; */
}
div {
    margin-top: 2%;
    align-content: center;
    justify-content: flex-end;
    /* margin:0 auto; */
    min-height: 25%;
    max-height: 30em;
    min-width: 50%;
    max-width: 70%;
}

